# vins_utm

./: CMakeLists.txt  README.md  package.xml  runEuRoc.sh  steps.md
config/: euroc_config.yaml
include/: HttpReq.h  HttpReq_win.h  System.h  parameters.h
include/backend/: problem.h
launch/: runEuRoC.launch
output/: pose_output-190917-144117.txt
src/: HttpReq.cpp  HttpReq_coreDump.cpp  HttpReq_win.cpp  System.cpp  estimator.cpp  parameters.cpp
src/backend/: problem.cc
test/: CurveFitting.cpp  errorEst.cpp  run_euroc.cpp  testHttp.cpp  testHttpLoop.cpp  testOpenMP.cpp  vinsUTM_node.cpp
